--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,20 @@
-fastapi
-uvicorn[standard]
-pydantic
+# Web Framework
+fastapi==0.109.0
+uvicorn[standard]==0.27.0
+pydantic==2.5.3
+pydantic-settings==2.1.0
+
+# Database
+sqlalchemy[asyncio]==2.0.25
+asyncpg==0.29.0
+alembic==1.13.1
+
+# Utilities
+python-dotenv==1.0.0
+python-multipart==0.0.6
+
+# Code Quality
+ruff==0.1.14
+
+# WebSocket support
+websockets==12.0
